Построение сетки главной стр мобильной версии

--- a/source/form.html
+++ b/source/form.html
@@ -3,32 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Вязание на заказ</title>
+        <link href="css/style.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <header class="page-header">
-            <a href="#" class="page-header__logo">
-                <img src="#" alt="Логотип Мишка" class="page-header__logo-image">
-            </a>
-            <nav class="main-nav">
-                <button class="main-nav__toggle">Открыть меню</button>
-                <div class="main-nav__wrapper">
-                    <ul class="main-nav__list cite-list">
-                        <li class="cite-list__item"><a class="cite-list__link" href="catalog.html">Каталог товаров</a></li>
-                        <li class="cite-list__item"><a class="cite-list__link" href="form.html">Вязание на заказ</a></li>
-                    </ul>
-                    <ul class="main-nav__list user-list">
-                        <li class="user-list__item">Поиск по сайту</li>
-                        <li class="user-list__item">Корзина: <span>пока пуста</span></li>
-                    </ul>
-                </div>
-                <ul>
-                    <li>Новые поступления</li>
-                    <li>Распродажа</li>
-                </ul>
-                <small class="preview__delivery">Бесплатная доставка по России</small>
-            </nav>
-        </header>
+        @import "inner-header.html"
 
         <main class="inner-page">
             <h1 class="inner-page__titile">Вязание на заказ</h1>
