--- a/source/index.html
+++ b/source/index.html
@@ -21,9 +21,10 @@
                 </ul>
             </section>
 
-            <section class="top-item">
+            <div class="container">
+                <section class="top-item">
                 <h2 class="top-item__title">Товар недели</h2>
-                <b class="top-item__subtitle">Вязаные корзинки</b>
+                <h3 class="top-item__subtitle">Вязаные корзинки</h2>
                 <p class="top-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
                 <table class="top-item__descriptions table">
                     <tr>
@@ -104,6 +105,7 @@
                 <img src="#" class="contacts__map" alt="Адрес на карте">
                 <a class="contacts__mail button">Напишите нам</a>
             </section>
+        </div>
         </main>
 
         <footer class="page-footer">
