Адаптивное оформление шапки и превью

--- a/source/index.html
+++ b/source/index.html
@@ -17,11 +17,14 @@
             <h1 class="visually-hidden">Мишка - магазин вязанных изделий.</h1>
             <section class="preview">
                 <h2 class="visually-hidden">превью магазина</h2>
-                <b class="preview__slogan">Милые штучки ручной работы для дома</b>
-                <ul class="preview__list">
-                    <li class="preview__item preview__item--interior">Предметы интерьера</li>
-                    <li class="preview__item preview__item--toys">Детские игрушки</li>
-                </ul>
+                <b class="preview__slogan">Милые штучки ручной<br> работы для дома</b>
+                <div class="preview__wrapper">
+                    <ul class="preview__list">
+                        <li class="preview__item preview__item--interior">Предметы интерьера</li>
+                        <li class="preview__item preview__item--toys">Детские игрушки</li>
+                    </ul>
+                </div>
+                <span class="preview__decoration"></span>
             </section>
 
             <div class="container">
