--- a/source/index.html
+++ b/source/index.html
@@ -14,14 +14,15 @@
         @import "header.html"
 
         <main>
+            
             <h1 class="visually-hidden">Мишка - магазин вязанных изделий.</h1>
             <section class="preview">
                 <h2 class="visually-hidden">превью магазина</h2>
                 <b class="preview__slogan">Милые штучки ручной<br> работы для дома</b>
                 <div class="preview__wrapper">
                     <ul class="preview__list">
-                        <li class="preview__item preview__item--interior">Предметы интерьера</li>
-                        <li class="preview__item preview__item--toys">Детские игрушки</li>
+                        <li class="preview__item preview__item--interior">Предметы<br> интерьера</li>
+                        <li class="preview__item preview__item--toys">Детские<br> игрушки</li>
                     </ul>
                 </div>
                 <span class="preview__decoration"></span>
@@ -29,26 +30,26 @@
 
             <div class="container">
                 <section class="top-item">
-                <h2 class="top-item__title">Товар недели</h2>
-                <h3 class="top-item__subtitle">Вязаные корзинки</h2>
+                <h2 class="top-item__subtitle">Товар недели</h2>
+                <h3 class="top-item__title">Вязаные корзинки</h2>
                 <p class="top-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
                 <table class="top-item__descriptions table">
-                    <tr>
-                        <td class="top-item__desc">Цвет:</td>
-                        <td class="top-item__value">«Тиффани»/серый</td>
+                    <tr class="table__tr">
+                        <td class="table__desc">Цвет:</td>
+                        <td class="table__value">«Тиффани»/серый</td>
                     </tr>
-                    <tr>
-                        <td class="top-item__desc">Диаметр:</td>
-                        <td class="top-item__value">25 см</td>
+                    <tr class="table__tr">
+                        <td class="table__desc">Диаметр:</td>
+                        <td class="table__value">25 см</td>
                     </tr>
-                    <tr>
-                        <td class="top-item__desc">Высота:</td>
-                        <td class="top-item__value">15 см</td>
+                    <tr class="table__tr">
+                        <td class="table__desc">Высота:</td>
+                        <td class="table__value">15 см</td>
                     </tr>
                 </table>
-                <img class="top-item__image" src="#" alt="Вязаные корзинки">
-                <p class="top-item__price">Цена: 990 руб.</p>
-                <a class="top-item__order button" href="#">Заказать</a>
+                <img class="table__image" src="img/triple-set-mobile.jpg" alt="Вязаные корзинки">
+                <p class="table__price">Цена: 990 руб.</p>
+                <a class="table__order button" href="#">Заказать</a>
             </section>
 
             <section class="features">
