--- a/source/index.html
+++ b/source/index.html
@@ -21,17 +21,18 @@
                 <b class="preview__slogan">Милые штучки ручной<br> работы для дома</b>
                 <div class="preview__wrapper">
                     <ul class="preview__list">
-                        <li class="preview__item preview__item--interior">Предметы<br> интерьера</li>
-                        <li class="preview__item preview__item--toys">Детские<br> игрушки</li>
+                        <li class="preview__item"><a class="preview__link preview__link--interior">Предметы<br> интерьера</a></li>
+                        <li class="preview__item"><a class="preview__link preview__link--toys">Детские<br> игрушки</a></li>
                     </ul>
                 </div>
-                <span class="preview__decoration"></span>
+                <div class="preview__decoration"></div>
             </section>
 
             <div class="container">
                 <section class="top-item">
                 <h2 class="top-item__subtitle">Товар недели</h2>
                 <h3 class="top-item__title">Вязаные корзинки</h2>
+                <div class="top-item__wrapper">
                 <p class="top-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
                 <table class="top-item__descriptions table">
                     <tr class="table__tr">
@@ -47,9 +48,15 @@
                         <td class="table__value">15 см</td>
                     </tr>
                 </table>
-                <img class="table__image" src="img/triple-set-mobile.jpg" alt="Вязаные корзинки">
-                <p class="table__price">Цена: 990 руб.</p>
-                <a class="table__order button" href="#">Заказать</a>
+                <picture class="top-item__image" alt="Вязаные корзинки">
+                    <source media="(min-width: 1200px)" srcset="img/triple-set-desktop.jpg">
+                    <source media="(min-width: 768px)" srcset="img/triple-set-tablet.jpg">   
+                    <img src="img/triple-set-mobile.jpg">
+                </picture> 
+                <p class="top-item__price">Цена: 990 руб.</p>
+                <a class="top-item__order button" href="#">Заказать</a>
+            </div>
+                <div class="top-item__zigzag zigzag"></div>
             </section>
 
             <section class="features">
@@ -65,10 +72,10 @@
             </section>
 
             <section class="reviews">
-                <div class="reviews__wrapper slider">
+                <div class="reviews__wrapper">
                     <h2 class="reviews__title">Отзывы</h2>
-                    <div class="reviews__list slider__list">
-                        <blockquote class="reviews__item slider__item">
+                    <div class="reviews__list">
+                        <blockquote class="reviews__item">
                             <p class="reviews-text">
                             Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
                             </p>
@@ -81,9 +88,9 @@
                         </blockquote>
                         <blockquote>Другой отзыв</blockquote>
                     </div>
-                    <p class="slider__toggles"></p>
-                        <button class="slider__back" type="button">Назад</button>
-                        <button class="slider__next" type="button">Вперед</button>
+                    <p class="reviews__toggles"></p>
+                        <button class="reviews__slider reviews__slider--back" type="button">Назад</button>
+                        <button class="reviews__slider reviews__slider--next" type="button">Вперед</button>
                     </p>
                     <a href="#" class="button reviews__button">Написать</a>
                 </div>
