--- a/source/form.html
+++ b/source/form.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>Вязание на заказ</title>
-        <link href="css/style.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    </head>
 
-    <body>
-        @import "inner-header.html"
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Вязание на заказ</title>
+    <link href="css/style.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+</head>
 
-        <main class="inner-page">
-            <h1 class="inner-page__titile">Вязание на заказ</h1>
-            <section class="form">
-                <h2 class="visually-hidden">оформление заказа</h2>
+<body>
+    @import "inner-header.html"
+
+    <main class="inner-page">
+
+        <h1 class="inner-page__title">Вязание на заказ</h1>
+        <div class="decoration-wrapper">
+            <div class="decoration decoration--iner-page"></div>
+        </div>
+
+
+        <section class="form">
+            <h2 class="visually-hidden">оформление заказа</h2>
+            <div class="container">
                 <p class="form__info">
-                    Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+                    Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами,
+                    чтобы уточнить детали.
                 </p>
                 <form class="form__order" method="GET" action="https://echo.htmlacademy.ru">
                     <fieldset class="form__type">
-                        <legend>Тип</legend>
-                        <ul class="form__type-list">
+                        <div>
+                            <legend>Тип</legend>
+                        </div>
+                        <ul class="form__list">
                             <li>
                                 <input type="radio" name="type" value="аксессуар-для-интерьера" id="interior" checked>
                                 <label for="interior">Аксессуар для интерьера</label>
@@ -31,10 +43,15 @@
                             </li>
                         </ul>
                     </fieldset>
+            </div>
 
+            <div class="form__container">
+                <div class="container">
                     <fieldset class="form__color">
-                        <legend>Цвет</legend>
-                        <ul>
+                        <div>
+                            <legend>Цвет</legend>
+                        </div>
+                        <ul class="form__list">
                             <li>
                                 <input type="checkbox" name="white" id="white" checked>
                                 <label for="white">Белый</label>
@@ -61,73 +78,69 @@
                             </li>
                         </ul>
                     </fieldset>
+                </div>
+            </div>
 
-                    <fieldset class="form__name">
+            <div class="container">
+                <fieldset class="form__name">
+                    <div>
                         <legend>ФИО</legend>
-                        <ul>
-                            <li>
-                                <input type="text" name="name" id="name" placeholder="Введите ваше имя*" required>
-                                <label for="name">Имя:</label>
-                            </li>
-                            <li>
-                                <input type="text" name="surname" id="surname" placeholder="Укажите фамилию*" required>
-                                <label for="surname">Фамилия:</label>
-                            </li>
-                            <li>
-                                <input type="text" name="middle-name" id="middle-name" placeholder="Отчество, если желаете">
-                                <label for="middle-name">Отчество:</label>
-                            </li>
-                        </ul>
+                    </div>
+                    <ul class="form__list">
+                        <li>
+                            <input type="text" name="name" id="name" placeholder="Введите ваше имя*" required>
+                            <label for="name">Имя:</label>
+                        </li>
+                        <li>
+                            <input type="text" name="surname" id="surname" placeholder="Укажите фамилию*" required>
+                            <label for="surname">Фамилия:</label>
+                        </li>
+                        <li>
+                            <input type="text" name="middle-name" id="middle-name" placeholder="Отчество, если желаете">
+                            <label for="middle-name">Отчество:</label>
+                        </li>
+                    </ul>
 
-                    </fieldset>
+                </fieldset>
+            </div>
 
+
+            <div class="form__container">
+                <div class="container">
                     <fieldset class="form__phone">
-                        <legend>Тел</legend>
-                        <input type="tel" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}" placeholder="+7 ХХХ ХХ ХХ*" required>
+                        <div>
+                            <legend>Тел</legend>
+                        </div>
+                        <input type="tel" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}"
+                            placeholder="+7 ХХХ ХХ ХХ*" required>
                     </fieldset>
 
                     <fieldset class="form__mail">
-                        <legend>E-mail</legend>
+                        <div>
+                            <legend>E-mail</legend>
+                        </div>
                         <input type="email" placeholder="Ваш Email*" required>
                     </fieldset>
+                </div>
+            </div>
 
-                    <fieldset class="form__area">
+            <div class="container">
+                <fieldset class="form__area">
+                    <div>
                         <legend>Доп</legend>
-                        <textarea rows="6" cols="60" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-                    </fieldset>
-                    <button type="submit" class="button">Отправить заказ</button>
-                </form>
+                    </div>
+                    <textarea rows="6" cols="60" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+                </fieldset>
                 <small class="form__required">*Поля обязательны для заполнения</small>
-            </section>
+                <button class="form__button button" type="submit" class="button">Отправить заказ</button>
+            </div>
+            </form>
 
-            <footer class="page-footer">
-                <img src="#" class="page-footer__logo" alt="Логотип магазина Мишка">
-                <div class="page-footer__social social">
-                    <ul class="social__list">
-                        <li class="social__item">
-                            <a class="social__link social__link--instagram" href="#">Инст
-                                <img src="#" class="social__icon">
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link social__link--facebook" href="#">Фб
-                                <img src="#" class="social__icon">
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link social__link--twitter" href="#">Тв
-                                <img src="#" class="social__icon">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="page-footer__copyright copyright">
-                    <b class="copyright__text">Разработано</b>
-                    <a href="#" class="copyright__link">
-                        <img src="#" class="copyright__logo" alt="Лого html-академии">
-                    </a>
-                </div>
-            </footer>
-        </main>
-    </body>
+        </section>
+        </div>
+
+        @import "footer.html"
+    </main>
+</body>
+
 </html>
