Создан спрайт для svg, svg вставлены с помощью use

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+    @import "sprite.html"
     @import "header.html"
+
 
     <main>
 
@@ -137,7 +139,7 @@
                 </table>
 
                 
-                <a class="contacts__mail button">Напишите нам</a>
+                <a class="contacts__mail button" href="#">Напишите нам</a>
             </div>
             <div class="contacts__map map">
                 <iframe src="https://yandex.ru/map-widget/v1/-/CCQtNOajHB" width="320" height="457" frameborder="1"
