--- a/source/form.html
+++ b/source/form.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    @import "sprite.html"
     @import "inner-header.html"
 
     <main class="inner-page">
@@ -34,11 +35,13 @@
                         </div>
                         <ul class="form__list">
                             <li>
-                                <input type="radio" name="type" value="аксессуар-для-интерьера" id="interior" checked>
+                                <input class="visually-hidden" type="radio" name="type" value="аксессуар-для-интерьера"
+                                    id="interior" checked>
                                 <label for="interior">Аксессуар для интерьера</label>
                             </li>
                             <li>
-                                <input type="radio" name="type" value="детская-игрушка" id="toy">
+                                <input class="visually-hidden" type="radio" name="type" value="детская-игрушка"
+                                    id="toy">
                                 <label for="toy">Детская игрушка</label>
                             </li>
                         </ul>
@@ -53,27 +56,27 @@
                         </div>
                         <ul class="form__list">
                             <li>
-                                <input type="checkbox" name="white" id="white" checked>
+                                <input class="visually-hidden" type="checkbox" name="white" id="white" checked>
                                 <label for="white">Белый</label>
                             </li>
                             <li>
-                                <input type="checkbox" name="grey" id="grey" checked>
+                                <input class="visually-hidden" type="checkbox" name="grey" id="grey" checked>
                                 <label for="grey">Серый</label>
                             </li>
                             <li>
-                                <input type="checkbox" name="tiffany" id="tiffany">
+                                <input class="visually-hidden" type="checkbox" name="tiffany" id="tiffany">
                                 <label for="tiffany">"Тиффани"</label>
                             </li>
                             <li>
-                                <input type="checkbox" name="black" id="black">
+                                <input class="visually-hidden" type="checkbox" name="black" id="black">
                                 <label for="black">Черный</label>
                             </li>
                             <li>
-                                <input type="checkbox" name="pink" id="pink">
+                                <input class="visually-hidden" type="checkbox" name="pink" id="pink">
                                 <label for="pink">Розовый</label>
                             </li>
                             <li>
-                                <input type="checkbox" name="orange" id="orange">
+                                <input class="visually-hidden" type="checkbox" name="orange" id="orange">
                                 <label for="orange">Оранжевый</label>
                             </li>
                         </ul>
@@ -111,15 +114,25 @@
                         <div>
                             <legend>Тел</legend>
                         </div>
-                        <input type="tel" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}"
-                            placeholder="+7 ХХХ ХХ ХХ*" required>
+                        <div class="form__input-wrapper">
+                            <input type="tel" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}"
+                                placeholder="+7 ХХХ ХХ ХХ*" required>
+                            <svg class="form__phone-icon" width="24.829px" height="24.333px">
+                                <use xlink:href="#phone"></use>
+                            </svg>
+                        </div>
                     </fieldset>
 
-                    <fieldset class="form__mail">
+                    <fieldset class="form__email">
                         <div>
                             <legend>E-mail</legend>
                         </div>
-                        <input type="email" placeholder="Ваш Email*" required>
+                        <div class="form__input-wrapper">
+                            <input type="email" placeholder="Ваш Email*" required>
+                                <svg class="form__email-icon" width="32px" height="32px">
+                                    <use xlink:href="#email"></use>
+                                </svg>
+                        </div>
                     </fieldset>
                 </div>
             </div>
