Добавлена модалка. Исправлен класс button

--- a/source/form.html
+++ b/source/form.html
@@ -145,7 +145,7 @@
                     <textarea rows="6" cols="60" placeholder="Опишите все ваши пожелания к заказу"></textarea>
                 </fieldset>
                 <small class="form__required">*Поля обязательны для заполнения</small>
-                <button class="form__button button" type="submit" class="button">Отправить заказ</button>
+                <button class="form__button button" type="submit">Отправить заказ</button>
             </div>
             </form>
 
