--- a/source/index.html
+++ b/source/index.html
@@ -151,6 +151,30 @@
     </main>
 
     @import "footer.html"
+
+    <section class="modal modal-cart">
+        <div class="modal-cart__container">
+        <h2 class="modal-cart__title">Добавить в корзину</h2>
+        <p class="modal-cart__text">Выберите размер:</p>
+        <form method="GET" action="https://echo.htmlacademy.ru">
+        <ul class="modal-cart__list">
+            <li class="modal-cart__item">
+                <input type="radio" name="size" value="S" id="s" class="visually-hidden" checked>
+                <label for="s" class="modal-cart__size">S</label>
+            </li>
+            <li class="modal-cart__item">
+                <input type="radio" name="size" value="M" id="m" class="visually-hidden">
+                <label for="m" class="modal-cart__size">M</label>
+            </li><li class="modal-cart__item">
+                <input type="radio" name="size" value="L" id="l" class="visually-hidden">
+                <label for="l" class="modal-cart__size">L</label>
+            </li>
+        </ul>
+        <button type="submit" class="modal-cart__button button">Добавить</button>
+        </form>
+        </div>
+    </section>
+    <div class="modal-overlay"></div>
 </body>
 
 </html>
