Правки элементов, отладка кроссбраузерности

--- a/source/index.html
+++ b/source/index.html
@@ -37,18 +37,18 @@
                     <div class="top-item__wrapper">
                         <p class="top-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках,
                             и трех размерах.</p>
-                        <table class="top-item__descriptions table">
-                            <tr class="table__tr">
-                                <td class="table__desc">Цвет:</td>
-                                <td class="table__value">«Тиффани»/серый</td>
+                        <table class="top-item__descriptions top-item__table">
+                            <tr class="top-item__table-tr">
+                                <td class="top-item__table-desc">Цвет:</td>
+                                <td class="top-item__table-value">«Тиффани»/серый</td>
                             </tr>
-                            <tr class="table__tr">
-                                <td class="table__desc">Диаметр:</td>
-                                <td class="table__value">25 см</td>
+                            <tr class="top-item__table-tr">
+                                <td class="top-item__table-desc">Диаметр:</td>
+                                <td class="top-item__table-value">25 см</td>
                             </tr>
-                            <tr class="table__tr">
-                                <td class="table__desc">Высота:</td>
-                                <td class="table__value">15 см</td>
+                            <tr class="top-item__table-tr">
+                                <td class="top-item__table-desc">Высота:</td>
+                                <td class="top-item__table-value">15 см</td>
                             </tr>
                         </table>
                         <picture class="top-item__image" alt="Вязаные корзинки">
