--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
                             <img srcset="img/content/triple-set-mobile@1x.jpg 1x, img/content/triple-set-mobile@2x.jpg 2x">
                         </picture>
                         <p class="top-item__price">Цена: 990 руб.</p>
-                        <a class="top-item__order button" href="#">Заказать</a>
+                        <button class="top-item__order button" href="#">Заказать</button>
                     </div>
 
             </section>
@@ -175,6 +175,8 @@
         </div>
     </section>
     <div class="modal-overlay"></div>
+
+    <script src="js/script.min.js"></script>
 </body>
 
 </html>
