Обновлены зависимости и сборка

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Mishka - Каталог</title>
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    @import "sprite.html"
-    @import "inner-header.html"
+    @@include('components/sprite.html')
+    @@include('components/header.html')
 
     <main class="inner-page">
 
@@ -51,9 +51,10 @@
                                 <b class="product-item__price">
                                     1 200 руб.
                                 </b>
-                                    <svg  class="product-item__cart modal__btn" width="20.294px" height="18.849px"  aria-label="Корзина">
-                                        <use xlink:href="#cart"></use>                        
-                                    </svg>
+                                <svg class="product-item__cart modal__btn" width="20.294px" height="18.849px"
+                                    aria-label="Корзина">
+                                    <use xlink:href="#cart"></use>
+                                </svg>
                             </div>
                         </div>
                     </li>
@@ -83,9 +84,10 @@
                                 <b class="product-item__price">
                                     690 руб.
                                 </b>
-                                    <svg class="product-item__cart  modal__btn" width="20.294px" height="18.849px" aria-label="Корзина">
-                                        <use xlink:href="#cart"></use>                        
-                                    </svg> 
+                                <svg class="product-item__cart  modal__btn" width="20.294px" height="18.849px"
+                                    aria-label="Корзина">
+                                    <use xlink:href="#cart"></use>
+                                </svg>
                             </div>
                         </div>
                     </li>
@@ -115,9 +117,10 @@
                                 <b class="product-item__price">
                                     1 500 руб.
                                 </b>
-                                    <svg class="product-item__cart  modal__btn" width="20.294px" height="18.849px" aria-label="Корзина">
-                                        <use xlink:href="#cart"></use>                        
-                                    </svg>
+                                <svg class="product-item__cart  modal__btn" width="20.294px" height="18.849px"
+                                    aria-label="Корзина">
+                                    <use xlink:href="#cart"></use>
+                                </svg>
                             </div>
                         </div>
                     </li>
@@ -136,9 +139,12 @@
                 </div>
                 <div class="production-video__video">
                     <picture>
-                        <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
-                        <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-                        <img class="production-video__video-poster" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства" width="260" height="150">
+                        <source media="(min-width: 1150px)"
+                            srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+                        <img class="production-video__video-poster" src="img/video-mobile@1x.jpg"
+                            srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства" width="260" height="150">
                     </picture>
                     <!-- <video src="#" class="production-video__video-player" poster="img/video-mobile@1x.jpg"></video> -->
                     <button class="production-video__play" type="button">
@@ -152,33 +158,34 @@
         </div>
     </main>
 
-        @import "footer.html"
+    @@include('components/footer.html')
 
-        <section class="modal modal-cart">
-            <div class="modal-cart__container">
+    <section class="modal modal-cart">
+        <div class="modal-cart__container">
             <h2 class="modal-cart__title">Добавить в корзину</h2>
             <p class="modal-cart__text">Выберите размер:</p>
             <form method="GET" action="https://echo.htmlacademy.ru">
-            <ul class="modal-cart__list">
-                <li class="modal-cart__item">
-                    <input type="radio" name="size" value="S" id="s" class="visually-hidden" checked>
-                    <label for="s" class="modal-cart__size">S</label>
-                </li>
-                <li class="modal-cart__item">
-                    <input type="radio" name="size" value="M" id="m" class="visually-hidden">
-                    <label for="m" class="modal-cart__size">M</label>
-                </li><li class="modal-cart__item">
-                    <input type="radio" name="size" value="L" id="l" class="visually-hidden">
-                    <label for="l" class="modal-cart__size">L</label>
-                </li>
-            </ul>
-            <button type="submit" class="modal-cart__button button">Добавить</button>
+                <ul class="modal-cart__list">
+                    <li class="modal-cart__item">
+                        <input type="radio" name="size" value="S" id="s" class="visually-hidden" checked>
+                        <label for="s" class="modal-cart__size">S</label>
+                    </li>
+                    <li class="modal-cart__item">
+                        <input type="radio" name="size" value="M" id="m" class="visually-hidden">
+                        <label for="m" class="modal-cart__size">M</label>
+                    </li>
+                    <li class="modal-cart__item">
+                        <input type="radio" name="size" value="L" id="l" class="visually-hidden">
+                        <label for="l" class="modal-cart__size">L</label>
+                    </li>
+                </ul>
+                <button type="submit" class="modal-cart__button button">Добавить</button>
             </form>
-            </div>
-        </section>
-        <div class="modal-overlay"></div>
+        </div>
+    </section>
+    <div class="modal-overlay"></div>
 
-        <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
